# Operating-systems-

./: README.md
Lab1/: lab1_.sln  main.cpp
Lab1C/: CMakeLists.txt  creator.cpp  reporter.cpp
Lab1EC/: CMakeLists.txt  creator.cpp  employee.cpp  employee.h  main.cpp  reporter.cpp  tests.cpp
Lab2/: CMakeLists.txt  CMakePresets.json  average.cpp  core.cpp  core.h  main.cpp  min_max.cpp  min_max.h  tests.cpp
Lab2F/: CMakeLists.txt  average.h  main.cpp  tests.cpp
Lab3/: CMakeLists.txt  helper.cpp  helper.h  main.cpp  marker.cpp  marker.h  tests.cpp  threadsync.cpp  threadsync.h
Lab4/: CMakeLists.txt  process.cpp  process.h  receiver.cpp  sender.cpp  tests.cpp  utils.cpp  utils.h
Lab5/: CMakeLists.txt  client.cpp  client.h  employee.h  main.cpp  record_lock.h  server.cpp  server.h
colloquium/: Answers (English version).docx  Answers (Russian version).docx  CMakeLists.txt  exesizes.cpp  exesizes.h  main.cpp  tests.cpp
colloquium2/: Dockerfile  docker-compose.yml  prometheus.yml  requirements.txt
colloquium2/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
resume/: cv.docx
